правки по страницам наполение и техника

--- a/src/filling-desc.html
+++ b/src/filling-desc.html
@@ -219,7 +219,7 @@
                                 </li>
                                 <li class="total__item">
                                     <div class="total__item-name">
-                                        Наполенение
+                                        Наполнение
                                     </div>
                                     <div class="total__item-price">
                                         <div class="total__item-price-new">
