--- a/src/onboarding2.html
+++ b/src/onboarding2.html
@@ -50,13 +50,13 @@
                                         <div class="onboarding__item-title">
                                             Жилой комплекс
                                         </div>
-                                        <label class="select">
+                                        <label class="select2">
                                             <select>
                                                 <option value="" selected>Нет в списке</option>
                                                 <option value="">ЖК 4YOU Business - 2</option>
                                                 <option value="">ЖК 4YOU Business - 3</option>
                                             </select>
-                                            <div class="select__arrow">
+                                            <div class="select2__arrow">
                                                 <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                     <path d="M5.8335 8.33325L10.0002 12.4999L14.1668 8.33325" stroke="#AAAAAA" stroke-width="2"/>
                                                 </svg>
