--- a/src/onboarding3.html
+++ b/src/onboarding3.html
@@ -53,13 +53,13 @@
                                         <div class="onboarding__item-title">
                                             Жилой комплекс
                                         </div>
-                                        <label class="select">
+                                        <label class="select2">
                                             <select>
                                                 <option value="" selected>Нет в списке</option>
                                                 <option value="">ЖК 4YOU Business - 2</option>
                                                 <option value="">ЖК 4YOU Business - 3</option>
                                             </select>
-                                            <div class="select__arrow">
+                                            <div class="select2__arrow">
                                                 <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                     <path d="M5.8335 8.33325L10.0002 12.4999L14.1668 8.33325" stroke="#AAAAAA" stroke-width="2"/>
                                                 </svg>
@@ -157,13 +157,13 @@
                                             </label>
                                         </div>
                                         <div class="onboarding__next-column">
-                                            <label class="select select_style1">
+                                            <label class="select2 select_style1">
                                                 <select>
                                                     <option value="" selected>По возрастанию площади</option>
                                                     <option value="">По убыванию площади</option>
                                                     <option value="">По ещё чему-то................</option>
                                                 </select>
-                                                <div class="select__arrow">
+                                                <div class="select2__arrow">
                                                     <svg width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                         <path d="M5.80678 8.30675L7.53345 10.0334C7.79345 10.2934 8.21345 10.2934 8.47345 10.0334L10.2001 8.30675C10.6201 7.88675 10.3201 7.16675 9.72678 7.16675H6.27345C5.68012 7.16675 5.38678 7.88675 5.80678 8.30675Z" fill="#AAAAAA"/>
                                                     </svg>                                                
