--- a/src/packages-category.html
+++ b/src/packages-category.html
@@ -171,12 +171,12 @@
                                     </div>
                                     <div class="filter-constructor__bottom">
                                         <div class="filter-constructor__select">
-                                            <label class="select select_style1">
+                                            <label class="select2 select_style1">
                                                 <select>
                                                     <option value="" selected="">По возрастанию цены</option>
                                                     <option value="">По возрастанию цены</option>
                                                 </select>
-                                                <div class="select__arrow">
+                                                <div class="select2__arrow">
                                                     <svg width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                         <path d="M5.80678 8.30675L7.53345 10.0334C7.79345 10.2934 8.21345 10.2934 8.47345 10.0334L10.2001 8.30675C10.6201 7.88675 10.3201 7.16675 9.72678 7.16675H6.27345C5.68012 7.16675 5.38678 7.88675 5.80678 8.30675Z" fill="#AAAAAA"></path>
                                                     </svg>                                                
@@ -184,12 +184,12 @@
                                             </label>    
                                         </div>
                                         <div class="filter-constructor__select _brand">
-                                            <label class="select select_style1">
+                                            <label class="select2 select_style1">
                                                 <select>
                                                     <option value="" selected="">Производитель: LG</option>
                                                     <option value="">Производитель: LG</option>
                                                 </select>
-                                                <div class="select__arrow">
+                                                <div class="select2__arrow">
                                                     <svg width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                         <path d="M5.80678 8.30675L7.53345 10.0334C7.79345 10.2934 8.21345 10.2934 8.47345 10.0334L10.2001 8.30675C10.6201 7.88675 10.3201 7.16675 9.72678 7.16675H6.27345C5.68012 7.16675 5.38678 7.88675 5.80678 8.30675Z" fill="#AAAAAA"></path>
                                                     </svg>                                                
