--- a/src/packages-desc.html
+++ b/src/packages-desc.html
@@ -105,33 +105,19 @@
                                 </div>
                             </aside>
                             <div class="content-box">
-                                <div class="filter-constructor _filling-desc">
+                                <div class="filter-constructor">
                                     <div class="filter-constructor__top">   
                                         <div class="filter-constructor__item">
-                                            <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                <path d="M0.151035 1.3743H0.851113V20H5.73963V19.3129C5.73963 19.12 5.73768 18.9322 5.73389 18.7491H14.2664C14.2627 18.9322 14.2607 19.12 14.2607 19.3129V20H19.1492V1.3743H19.8493V0H0.151035V1.3743ZM11.4842 1.3743C11.474 3.33219 11.4958 6.25883 13.524 9.74324H10.6874V1.3743H11.4842ZM10.6874 11.1175H14.4123C14.769 11.6185 15.1687 12.1291 15.6172 12.6483C15.166 13.3283 14.543 14.7204 14.3331 17.3748H10.6874V11.1175ZM8.51615 1.3743H9.31307V9.74324H6.47647C8.50459 6.25883 8.52639 3.33219 8.51615 1.3743ZM5.58811 11.1175H9.31307V17.3748H5.66729C5.45748 14.7204 4.83451 13.3283 4.38326 12.6483C4.83174 12.1291 5.23143 11.6185 5.58811 11.1175Z" fill="#AAAAAA"/>
-                                            </svg>
-                                            <span>Шторы</span>                                            
-                                        </div>
-                                        <div class="filter-constructor__item _active">
-                                            <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                <path d="M12.2804 7.37492V10.8801C12.2804 12.7197 13.6305 14.2562 15.4116 14.5906C15.1428 15.599 14.1949 16.3461 13.0701 16.3461C11.7368 16.3461 10.6522 15.2964 10.6522 14.0062V3.65386H13.0701V2.34949H6.92988V3.65382H9.34781V14.0062C9.34781 15.2965 8.26316 16.3462 6.92988 16.3462C5.80512 16.3462 4.85723 15.599 4.58836 14.5906C6.36953 14.2562 7.71965 12.7198 7.71965 10.8801V7.37496H0V10.8801C0 12.7639 1.41566 14.33 3.26016 14.6128C3.55609 16.3344 5.08855 17.6505 6.92984 17.6505C8.20301 17.6505 9.32852 17.0212 9.99992 16.0639C10.6714 17.0212 11.7969 17.6505 13.07 17.6505C14.9114 17.6505 16.4438 16.3344 16.7397 14.6128C18.5843 14.33 20 12.7639 20 10.8802V7.375H12.2804V7.37492Z" fill="#AAAAAA"/>
-                                            </svg>
-                                            <span>Освещение</span>                                            
+                                            <span>Пакеты электроники</span>                                            
                                         </div>
                                         <div class="filter-constructor__item">
-                                            <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                <path d="M14.7455 14.3594V13.0269C14.1026 13.2094 13.5955 13.7166 13.4129 14.3594H14.7455Z" fill="#AAAAAA"/>
-                                                <path d="M5.25391 14.3594H6.58647C6.40394 13.7166 5.89674 13.2094 5.25391 13.0269V14.3594Z" fill="#AAAAAA"/>
-                                                <path d="M5.25391 11.946C6.47956 12.1652 7.44804 13.1337 7.66731 14.3594H12.3327C12.552 13.1337 13.5205 12.1652 14.7461 11.946V5.57031H11.2731L13.537 7.83413C13.7429 8.04007 13.7429 8.37395 13.537 8.5799L10.3729 11.744C10.167 11.9499 9.83308 11.9499 9.62713 11.744L6.46307 8.5799C6.25712 8.37395 6.25712 8.04007 6.46307 7.83413L8.72689 5.57031H5.25391V11.946Z" fill="#AAAAAA"/>
-                                                <path d="M15.8008 14.8867C15.8008 15.178 15.5647 15.4141 15.2734 15.4141H4.72656C4.43533 15.4141 4.19922 15.178 4.19922 14.8867V5.57031H2.08984V18.4727C2.08984 18.7639 2.32595 19 2.61719 19C2.90842 19 3.14453 18.7639 3.14453 18.4727V17.5234H4.19922V18.4727C4.19922 18.7639 4.43533 19 4.72656 19C5.0178 19 5.25391 18.7639 5.25391 18.4727V17.5234H6.30859V18.4727C6.30859 18.7639 6.5447 19 6.83594 19C7.12717 19 7.36328 18.7639 7.36328 18.4727V17.5234H8.41797V18.4727C8.41797 18.7639 8.65408 19 8.94531 19C9.23655 19 9.47266 18.7639 9.47266 18.4727V17.5234H10.5273V18.4727C10.5273 18.7639 10.7635 19 11.0547 19C11.3459 19 11.582 18.7639 11.582 18.4727V17.5234H12.6367V18.4727C12.6367 18.7639 12.8728 19 13.1641 19C13.4553 19 13.6914 18.7639 13.6914 18.4727V17.5234H14.7461V18.4727C14.7461 18.7639 14.9822 19 15.2734 19C15.5647 19 15.8008 18.7639 15.8008 18.4727V17.5234H16.8555V18.4727C16.8555 18.7639 17.0916 19 17.3828 19C17.674 19 17.9102 18.7639 17.9102 18.4727V5.57031H15.8008V14.8867Z" fill="#AAAAAA"/>
-                                                <path d="M7.58081 8.20728L9.99873 5.78936L12.4166 8.20728L9.99873 10.6252L7.58081 8.20728Z" fill="#AAAAAA"/>
-                                                <path d="M17.9453 1H2.05469C1.47218 1 1 1.47218 1 2.05469V3.46094C1 4.04344 1.47218 4.51562 2.05469 4.51562H17.9453C18.5278 4.51562 19 4.04344 19 3.46094V2.05469C19 1.47218 18.5278 1 17.9453 1Z" fill="#AAAAAA"/>
-                                            </svg>                                            
-                                            <span>Ковры</span>                                            
+                                            <span>Кондиционеры</span>                                            
+                                        </div>
+                                        <div class="filter-constructor__item _active">                                       
+                                            <span>Товары по категориям</span>                                            
                                         </div>
                                     </div>
-                                    <div class="filter-constructor__top _packs">   
+                                    <div class="filter-constructor__top _packs _mob-none">   
                                         <div class="filter-constructor__item">
                                             <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <g clip-path="url(#clipW)">
