--- a/src/filling.html
+++ b/src/filling.html
@@ -126,12 +126,12 @@
                                     </div>
                                     <div class="filter-constructor__bottom">
                                         <div class="filter-constructor__select">
-                                            <label class="select select_style1">
+                                            <label class="select2 select_style1">
                                                 <select>
                                                     <option value="" selected="">По возрастанию цены</option>
                                                     <option value="">По возрастанию цены</option>
                                                 </select>
-                                                <div class="select__arrow">
+                                                <div class="select2__arrow">
                                                     <svg width="16" height="17" viewBox="0 0 16 17" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                         <path d="M5.80678 8.30675L7.53345 10.0334C7.79345 10.2934 8.21345 10.2934 8.47345 10.0334L10.2001 8.30675C10.6201 7.88675 10.3201 7.16675 9.72678 7.16675H6.27345C5.68012 7.16675 5.38678 7.88675 5.80678 8.30675Z" fill="#AAAAAA"></path>
                                                     </svg>                                                
@@ -142,10 +142,10 @@
                                             <li>
                                                 <a href="#" class="pagination-arrow">
                                                     <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                        <mask id="mask0" mask-type="alpha" maskUnits="userSpaceOnUse" x="5" y="3" width="6" height="10">
+                                                        <mask id="mask54" mask-type="alpha" maskUnits="userSpaceOnUse" x="5" y="3" width="6" height="10">
                                                         <path fill-rule="evenodd" clip-rule="evenodd" d="M5.49211 7.55729L9.03377 4.01562C9.27856 3.77083 9.6744 3.77083 9.91659 4.01562L10.5051 4.60417C10.7499 4.84896 10.7499 5.24479 10.5051 5.48698L7.99471 7.9974L10.5051 10.5078C10.7499 10.7526 10.7499 11.1484 10.5051 11.3906L9.91919 11.9844C9.6744 12.2292 9.27856 12.2292 9.03638 11.9844L5.49471 8.44271C5.24731 8.19792 5.24731 7.80208 5.49211 7.55729Z" fill="white"/>
                                                         </mask>
-                                                        <g mask="url(#mask0)">
+                                                        <g mask="url(#mask54)">
                                                         <rect x="16" y="16" width="16" height="16" transform="rotate(-180 16 16)" fill="#1374CF"/>
                                                         </g>
                                                     </svg>                                                        
@@ -175,10 +175,10 @@
                                             <li>
                                                 <a href="#" class="pagination-arrow _arrow-next">
                                                     <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                        <mask id="mask0" mask-type="alpha" maskUnits="userSpaceOnUse" x="5" y="3" width="6" height="10">
+                                                        <mask id="mask55" mask-type="alpha" maskUnits="userSpaceOnUse" x="5" y="3" width="6" height="10">
                                                         <path fill-rule="evenodd" clip-rule="evenodd" d="M10.5078 8.44271L6.96617 11.9844C6.72137 12.2292 6.32554 12.2292 6.08335 11.9844L5.49481 11.3958C5.25002 11.151 5.25002 10.7552 5.49481 10.513L8.00523 8.0026L5.49481 5.49219C5.25002 5.2474 5.25002 4.85156 5.49481 4.60938L6.08075 4.01562C6.32554 3.77083 6.72137 3.77083 6.96356 4.01562L10.5052 7.55729C10.7526 7.80208 10.7526 8.19792 10.5078 8.44271Z" fill="white"/>
                                                         </mask>
-                                                        <g mask="url(#mask0)">
+                                                        <g mask="url(#mask55)">
                                                         <rect width="16" height="16" fill="#1374CF"/>
                                                         </g>
                                                     </svg>                                
@@ -519,7 +519,7 @@
                                 </li>
                                 <li class="total__item">
                                     <div class="total__item-name">
-                                        Наполенение
+                                        Наполнение
                                     </div>
                                     <div class="total__item-price">
                                         <div class="total__item-price-new">
