правки по наполнению и технике, добавлен бэкдроп категория из страницы техника каталог

--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,8 @@
                 <li><a href="packages-category.html">Пакеты (Категория)</a></li>
                 <li><a href="packages-desc.html">Пакеты (Описание)</a></li>
                 <br><br>
+                <li><a href="category-backdrop.html">Бэкдроп Категория (пакеты)</a></li>
+                <br><br>
                 <li><a href="finishing.html">Отделка гостиная (c изменением ракурса)</a></li>
                 <br><br>
                 <li><a href="checkout1.html">Checkout: ремонт под ключ</a></li>
