--- a/src/packages-category.html
+++ b/src/packages-category.html
@@ -117,7 +117,26 @@
                                             <span>Товары по категориям</span>                                            
                                         </div>
                                     </div>
-                                    <div class="filter-constructor__top _packs">   
+                                    <button class="packs-select">
+                                        <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <g clip-path="url(#clip0)">
+                                            <path d="M20 15.1693V6.88983L15.5186 8.90233C13.5953 9.74378 11.4012 9.71721 9.49883 8.82944C7.53 7.91065 5.19734 8.10819 3.41102 9.34483L3.39773 9.35378L0 11.5712V15.1693H9.41406V16.4974H3.75V17.6693H16.25V16.4974H10.5859V15.1693H20ZM6.91406 12.8386V11.6667H8.08594V12.8386H6.91406ZM11.9141 11.6667H13.0859V12.8386H11.9141V11.6667ZM9.41406 11.6667H10.5859V12.8386H9.41406V11.6667Z" fill="#1374CF"/>
+                                            <path d="M2.75074 8.37661C4.8773 6.90786 7.65207 6.67438 9.99441 7.76747C11.5909 8.51251 13.4321 8.5352 15.0464 7.82973L20 5.60516V2.33075H0V10.1718L2.75074 8.37661Z" fill="#1374CF"/>
+                                            </g>
+                                            <defs>
+                                            <clipPath id="clip0">
+                                            <rect width="20" height="20" fill="white"/>
+                                            </clipPath>
+                                            </defs>
+                                        </svg>
+                                        <span>Телевизоры</span>
+                                        <div class="packs-select__arrow">
+                                            <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                <path d="M5.80654 7.80669L7.5332 9.53335C7.7932 9.79335 8.2132 9.79335 8.4732 9.53335L10.1999 7.80669C10.6199 7.38669 10.3199 6.66669 9.72654 6.66669H6.2732C5.67987 6.66669 5.38654 7.38669 5.80654 7.80669Z" fill="#AAAAAA"/>
+                                            </svg>                                                
+                                        </div>
+                                    </button>
+                                    <div class="filter-constructor__top _packs _mob-none">   
                                         <div class="filter-constructor__item">
                                             <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <g clip-path="url(#clipW)">
@@ -720,7 +739,6 @@
                         </div>
                     </div>
                 </div>
-                <!--#include virtual="/templates/_footer-filling.html" -->
             </div>
         </div>
     </div>
