--- a/src/packages.html
+++ b/src/packages.html
@@ -622,7 +622,118 @@
                         </div>
                     </div>
                 </div>
-                <!--#include virtual="/templates/_footer-filling.html" -->
+                <div class="total-mob">
+                    <button class="total-mob__btn" data-swipe-threshold="20" data-swipe-timeout="10000" data-swipe-ignore="false"></button>
+                    <div class="container">
+                        <div class="total-mob__content">
+                            <div class="total-mob__scroll-content">
+                                <ul class="total-mob__list">
+                                    <li>
+                                        <div class="total-mob__list-name">
+                                            SmartRemont: 
+                                        </div>
+                                        <div class="total-mob__list-price">
+                                            <div class="total-mob__list-price-new">20 763 162 ₸</div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="total-mob__list-name">
+                                            Наполнение
+                                        </div>
+                                        <div class="total-mob__list-price">
+                                            <div class="total-mob__list-price-new">154 019 ₸</div>
+                                            <div class="total-mob__list-price-old">184 200 ₸</div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="total-mob__list-name">
+                                            Техника
+                                        </div>
+                                        <div class="total-mob__list-price">
+                                            <div class="total-mob__list-price-new">753 012 ₸</div>
+                                            <div class="total-mob__list-price-old">753 012 ₸</div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="total-mob__list-name">
+                                            Техника
+                                        </div>
+                                        <div class="total-mob__list-price">
+                                            <div class="total-mob__list-price-new">753 012 ₸</div>
+                                            <div class="total-mob__list-price-old">753 012 ₸</div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="total-mob__list-name">
+                                            Техника
+                                        </div>
+                                        <div class="total-mob__list-price">
+                                            <div class="total-mob__list-price-new">753 012 ₸</div>
+                                            <div class="total-mob__list-price-old">753 012 ₸</div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="total-mob__list-name">
+                                            Техника
+                                        </div>
+                                        <div class="total-mob__list-price">
+                                            <div class="total-mob__list-price-new">753 012 ₸</div>
+                                            <div class="total-mob__list-price-old">753 012 ₸</div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="total-mob__list-name">
+                                            Техника
+                                        </div>
+                                        <div class="total-mob__list-price">
+                                            <div class="total-mob__list-price-new">753 012 ₸</div>
+                                            <div class="total-mob__list-price-old">753 012 ₸</div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="total-mob__list-name">
+                                            Техника
+                                        </div>
+                                        <div class="total-mob__list-price">
+                                            <div class="total-mob__list-price-new">753 012 ₸</div>
+                                            <div class="total-mob__list-price-old">753 012 ₸</div>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="total-mob__list-name">
+                                            Техника
+                                        </div>
+                                        <div class="total-mob__list-price">
+                                            <div class="total-mob__list-price-new">753 012 ₸</div>
+                                            <div class="total-mob__list-price-old">753 012 ₸</div>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="total-mob__inner">
+                            <div class="total-mob__box">
+                                <div class="total-mob__title">
+                                    Итого
+                                </div>
+                                <div class="total-mob__price">
+                                    <div class="total-mob__price-new">
+                                        21 670 193 ₸
+                                    </div>
+                                    <div class="total-mob__price-old">
+                                        21 813 947 ₸
+                                    </div>
+                                </div>
+                                <div class="total-mob__discount">
+                                    Вы экономите 143 754 ₸ 
+                                </div>
+                            </div>
+                            <button class="total-mob__next button button1">
+                                Далее
+                            </button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
