страницы конструктора, без полной мобильной версии

--- a/src/finishing-living.html
+++ b/src/finishing-living.html
@@ -54,7 +54,7 @@
                                     <div class="finishing__selects"></div>
                                 </div>
                                 <div class="aside-constructor__content">
-                                    <div class="finishing__form">
+                                    <form class="finishing__form">
                                         <label class="finishing__item fake-check2">
                                             <div class="fake-check2__wrapper">
                                                 <input type="radio" name="package" checked>
@@ -103,7 +103,74 @@
                                                 </div>
                                             </div>
                                         </label>
-                                    </div>
+                                        <div class="finishing__form-box">
+                                            <label class="finishing__item fake-check2">
+                                                <div class="fake-check2__wrapper">
+                                                    <input type="checkbox" checked>
+                                                    <div class="fake-check2__square">
+                                                        <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                            <path d="M3.54009 5.99986C3.39935 5.87329 3.21595 5.80462 3.02669 5.80761C2.83743 5.81061 2.65631 5.88506 2.51965 6.01603C2.38298 6.147 2.3009 6.32479 2.28985 6.51375C2.27881 6.70272 2.33962 6.88886 2.46009 7.03486L4.12509 8.78236C4.1948 8.85549 4.27856 8.91378 4.37136 8.95373C4.46415 8.99368 4.56406 9.01448 4.66509 9.01486C4.76558 9.01545 4.86517 8.99583 4.95793 8.95718C5.0507 8.91853 5.13475 8.86163 5.20509 8.78986L10.2901 3.53986C10.359 3.46895 10.4133 3.38515 10.4499 3.29325C10.4865 3.20135 10.5046 3.10315 10.5032 3.00426C10.5018 2.90536 10.4809 2.80771 10.4418 2.71688C10.4026 2.62604 10.346 2.54381 10.2751 2.47486C10.2042 2.40592 10.1204 2.35162 10.0285 2.31506C9.93658 2.2785 9.83838 2.2604 9.73948 2.26179C9.64059 2.26319 9.54294 2.28404 9.4521 2.32318C9.36127 2.36231 9.27903 2.41895 9.21009 2.48986L4.67259 7.18486L3.54009 5.99986Z" fill="white"/>
+                                                        </svg>                                                            
+                                                    </div>
+                                                </div>
+                                                <div class="finishing__item-content">
+                                                    <div class="finishing__item-box">
+                                                        <div class="finishing__item-title">
+                                                            Материалы
+                                                        </div>
+                                                        <div class="finishing__item-text">
+                                                            В завизимости от выбранного пакета
+                                                        </div>
+                                                        <a href="#" class="finishing__item-more">
+                                                            Подробнее
+                                                        </a>
+                                                    </div>
+                                                    <div class="finishing__item-price">
+                                                        <div class="finishing__item-price-new">
+                                                            20 763 162 ₸
+                                                        </div>
+                                                        <div class="finishing__item-price-meter">
+                                                            123 900 ₸/м²
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </label>
+                                            <label class="finishing__item fake-check2">
+                                                <div class="fake-check2__wrapper">
+                                                    <input type="checkbox" checked>
+                                                    <div class="fake-check2__square">
+                                                        <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                            <path d="M3.54009 5.99986C3.39935 5.87329 3.21595 5.80462 3.02669 5.80761C2.83743 5.81061 2.65631 5.88506 2.51965 6.01603C2.38298 6.147 2.3009 6.32479 2.28985 6.51375C2.27881 6.70272 2.33962 6.88886 2.46009 7.03486L4.12509 8.78236C4.1948 8.85549 4.27856 8.91378 4.37136 8.95373C4.46415 8.99368 4.56406 9.01448 4.66509 9.01486C4.76558 9.01545 4.86517 8.99583 4.95793 8.95718C5.0507 8.91853 5.13475 8.86163 5.20509 8.78986L10.2901 3.53986C10.359 3.46895 10.4133 3.38515 10.4499 3.29325C10.4865 3.20135 10.5046 3.10315 10.5032 3.00426C10.5018 2.90536 10.4809 2.80771 10.4418 2.71688C10.4026 2.62604 10.346 2.54381 10.2751 2.47486C10.2042 2.40592 10.1204 2.35162 10.0285 2.31506C9.93658 2.2785 9.83838 2.2604 9.73948 2.26179C9.64059 2.26319 9.54294 2.28404 9.4521 2.32318C9.36127 2.36231 9.27903 2.41895 9.21009 2.48986L4.67259 7.18486L3.54009 5.99986Z" fill="white"/>
+                                                        </svg>                                                            
+                                                    </div>
+                                                </div>
+                                                <div class="finishing__item-content">
+                                                    <div class="finishing__item-box">
+                                                        <div class="finishing__item-title">
+                                                            Рабочий проект
+                                                        </div>
+                                                        <div class="finishing__item-text">
+                                                            План монтажа, расстановка мебели, вид систем ВК, планы полов, освящение, потолков и многое другое
+                                                        </div>
+                                                        <a href="#" class="finishing__item-more">
+                                                            Подробнее
+                                                        </a>
+                                                    </div>
+                                                    <div class="finishing__item-price">
+                                                        <div class="finishing__item-price-new">
+                                                            20 763 162 ₸
+                                                        </div>
+                                                        <div class="finishing__item-price-meter">
+                                                            123 900 ₸/м²
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </label>
+                                        </div>
+                                        <div class="inform">
+                                            Покупка материалов и проекта доступна только если общая сумма превышает <span>1 000 000 ₸</span>
+                                        </div>
+                                    </form>
                                 </div>
                             </aside>
                             <div class="content-box">
