--- a/src/finishing-modal2.html
+++ b/src/finishing-modal2.html
@@ -8,7 +8,7 @@
     <div class="wrapper">
         <div class="content">
             <!--#include virtual="/templates/_header.html" -->
-            <div class="constructor">
+            <div class="constructor-wrapper">
                 <div class="finishing-modal">
                     <button class="finishing-modal__close">
                         <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
