--- a/src/onboarding3.html
+++ b/src/onboarding3.html
@@ -7,7 +7,8 @@
     <div class="block"></div>
     <div class="wrapper">
         <div class="content">
-            <div class="constructor">
+            <div class="constructor-wrapper _pt62">
+                <!--#include virtual="/templates/_header-480.html" -->
                 <div class="header-back-to">
                     <!--#include virtual="/templates/_back-to.html" -->
                 </div>
