--- a/src/category-backdrop.html
+++ b/src/category-backdrop.html
@@ -8,7 +8,7 @@
     <div class="wrapper">
         <div class="content">
             <!--#include virtual="/templates/_header.html" -->
-            <div class="constructor">
+            <div class="constructor-wrapper">
                 <div class="packages-backdrop popup2">
                     <div class="popup2__top">
                         <div class="popup2__title">
