--- a/src/finishing-modal1.html
+++ b/src/finishing-modal1.html
@@ -8,7 +8,7 @@
     <div class="wrapper">
         <div class="content">
             <!--#include virtual="/templates/_header.html" -->
-            <div class="constructor">
+            <div class="constructor-wrapper">
                 <div class="finishing-backdrop">
                     <div class="finishing-backdrop__top">
                         <a href="#" class="back__link">
