--- a/src/finishing.html
+++ b/src/finishing.html
@@ -8,7 +8,7 @@
     <div class="wrapper">
         <div class="content">
             <!--#include virtual="/templates/_header.html" -->
-            <div class="constructor _constructor-page">
+            <div class="constructor-wrapper _constructor-page">
                 <section class="finishing">
                     <div class="container">
                         <div class="finishing__inner wrapper-with-aside">
