--- a/src/onboarding-modal2.html
+++ b/src/onboarding-modal2.html
@@ -8,7 +8,7 @@
     <div class="wrapper">
         <div class="content">
             <!--#include virtual="/templates/_header.html" -->
-            <div class="constructor">
+            <div class="constructor-wrapper">
                 <div class="residential-modal popup2 _done">
                     <div class="popup2__top">
                         <div class="popup2__title">
