--- a/src/onboarding2.html
+++ b/src/onboarding2.html
@@ -8,7 +8,7 @@
     <div class="wrapper">
         <div class="content">
             <!--#include virtual="/templates/_header.html" -->
-            <div class="constructor">
+            <div class="constructor-wrapper">
                 <!--#include virtual="/templates/_services.html" -->
                 <section class="onboarding">
                     <div class="container">
