--- a/src/packages.html
+++ b/src/packages.html
@@ -8,7 +8,7 @@
     <div class="wrapper">
         <div class="content">
             <!--#include virtual="/templates/_header.html" -->
-            <div class="constructor">
+            <div class="constructor-wrapper">
                 <section class="packs">
                     <div class="container">
                         <div class="packs__inner wrapper-with-aside">
