модалка в онбординге, модалки для десктопа Отделка

--- a/src/finishing-modal5.html
+++ b/src/finishing-modal5.html
@@ -121,23 +121,8 @@
                             </div>
                         </a>
                     </div>
-                    <div class="finishing-modal__materials">
-                        <div class="finishing-modal__material">
-                            <div class="finishing-modal__material-image">
-                                <img src="images/material2.jpg" alt="">
-                            </div>
-                            <div class="finishing-modal__material-wrapper">
-                                <div class="finishing-modal__material-type">
-                                    ПОЛ
-                                </div>
-                                <div class="finishing-modal__material-name">
-                                    Пластиковый плинтус 6 см
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                     <button class="finishing-modal__show-hide">
-                        Скрыть материалы по-умолчанию
+                        Показать материалы по-умолчанию
                     </button>
                 </div>
             </div>
