--- a/src/finishing-modal4.html
+++ b/src/finishing-modal4.html
@@ -15,11 +15,22 @@
                             <path d="M15.8333 5.34199L14.6583 4.16699L10 8.82533L5.34166 4.16699L4.16666 5.34199L8.825 10.0003L4.16666 14.6587L5.34166 15.8337L10 11.1753L14.6583 15.8337L15.8333 14.6587L11.175 10.0003L15.8333 5.34199Z" fill="#252525"/>
                         </svg>                            
                     </button>
-                    <div class="finishing-modal__title">
-                        Выберите ламинат (15)
+                    <div class="finishing-modal__category">
+                        <button class="finishing-modal__category-item _active">
+                            Обои (5)
+                        </button>
+                        <button class="finishing-modal__category-item">
+                            Штукатурка (6)
+                        </button>
+                        <button class="finishing-modal__category-item">
+                            Перегородка
+                        </button>
+                        <button class="finishing-modal__category-item">
+                            Тюль
+                        </button>
                     </div>
                     <div class="finishing-modal__subtitle">
-                        Ламинат Floorpan, Серия Kastamonu, 31 класс 7 мм
+                        Поклейка обоев с покраской
                     </div>
                     <div class="finishing-modal__scroll-box">
                         <a href="#" class="material">
@@ -78,66 +89,9 @@
                                 Джакарта
                             </div>
                         </a>
-                        <a href="#" class="material">
-                            <div class="material__image">
-                                <img src="images/material.jpg" alt="">
-                                <div class="material__info-icon">
-                                    <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M1 6C1 3.23858 3.23858 1 6 1C7.32608 1 8.59785 1.52678 9.53553 2.46447C10.4732 3.40215 11 4.67392 11 6C11 8.76142 8.76142 11 6 11C3.23858 11 1 8.76142 1 6ZM2 6C2 8.20914 3.79086 10 6 10C7.06087 10 8.07828 9.57857 8.82843 8.82843C9.57857 8.07828 10 7.06087 10 6C10 3.79086 8.20914 2 6 2C3.79086 2 2 3.79086 2 6ZM6.5 6.25C6.5 6.11193 6.38807 6 6.25 6H5.75C5.61193 6 5.5 6.11193 5.5 6.25V7.75C5.5 7.88807 5.61193 8 5.75 8H6.25C6.38807 8 6.5 7.88807 6.5 7.75V6.25ZM6.25 4C6.38807 4 6.5 4.11193 6.5 4.25V4.75C6.5 4.88807 6.38807 5 6.25 5H5.75C5.61193 5 5.5 4.88807 5.5 4.75V4.25C5.5 4.11193 5.61193 4 5.75 4H6.25Z" fill="#595959"/>
-                                    </svg>                                        
-                                </div>
-                            </div>
-                            <div class="material__name">
-                                Дуб
-                                Джакарта
-                            </div>
-                        </a>
-                        <a href="#" class="material">
-                            <div class="material__image">
-                                <img src="images/material.jpg" alt="">
-                                <div class="material__info-icon">
-                                    <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M1 6C1 3.23858 3.23858 1 6 1C7.32608 1 8.59785 1.52678 9.53553 2.46447C10.4732 3.40215 11 4.67392 11 6C11 8.76142 8.76142 11 6 11C3.23858 11 1 8.76142 1 6ZM2 6C2 8.20914 3.79086 10 6 10C7.06087 10 8.07828 9.57857 8.82843 8.82843C9.57857 8.07828 10 7.06087 10 6C10 3.79086 8.20914 2 6 2C3.79086 2 2 3.79086 2 6ZM6.5 6.25C6.5 6.11193 6.38807 6 6.25 6H5.75C5.61193 6 5.5 6.11193 5.5 6.25V7.75C5.5 7.88807 5.61193 8 5.75 8H6.25C6.38807 8 6.5 7.88807 6.5 7.75V6.25ZM6.25 4C6.38807 4 6.5 4.11193 6.5 4.25V4.75C6.5 4.88807 6.38807 5 6.25 5H5.75C5.61193 5 5.5 4.88807 5.5 4.75V4.25C5.5 4.11193 5.61193 4 5.75 4H6.25Z" fill="#595959"/>
-                                    </svg>                                        
-                                </div>
-                            </div>
-                            <div class="material__name">
-                                Дуб
-                                Джакарта
-                            </div>
-                        </a>
-                        <a href="#" class="material">
-                            <div class="material__image">
-                                <img src="images/material.jpg" alt="">
-                                <div class="material__info-icon">
-                                    <svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M1 6C1 3.23858 3.23858 1 6 1C7.32608 1 8.59785 1.52678 9.53553 2.46447C10.4732 3.40215 11 4.67392 11 6C11 8.76142 8.76142 11 6 11C3.23858 11 1 8.76142 1 6ZM2 6C2 8.20914 3.79086 10 6 10C7.06087 10 8.07828 9.57857 8.82843 8.82843C9.57857 8.07828 10 7.06087 10 6C10 3.79086 8.20914 2 6 2C3.79086 2 2 3.79086 2 6ZM6.5 6.25C6.5 6.11193 6.38807 6 6.25 6H5.75C5.61193 6 5.5 6.11193 5.5 6.25V7.75C5.5 7.88807 5.61193 8 5.75 8H6.25C6.38807 8 6.5 7.88807 6.5 7.75V6.25ZM6.25 4C6.38807 4 6.5 4.11193 6.5 4.25V4.75C6.5 4.88807 6.38807 5 6.25 5H5.75C5.61193 5 5.5 4.88807 5.5 4.75V4.25C5.5 4.11193 5.61193 4 5.75 4H6.25Z" fill="#595959"/>
-                                    </svg>                                        
-                                </div>
-                            </div>
-                            <div class="material__name">
-                                Дуб
-                                Джакарта
-                            </div>
-                        </a>
-                    </div>
-                    <div class="finishing-modal__materials">
-                        <div class="finishing-modal__material">
-                            <div class="finishing-modal__material-image">
-                                <img src="images/material2.jpg" alt="">
-                            </div>
-                            <div class="finishing-modal__material-wrapper">
-                                <div class="finishing-modal__material-type">
-                                    ПОЛ
-                                </div>
-                                <div class="finishing-modal__material-name">
-                                    Пластиковый плинтус 6 см
-                                </div>
-                            </div>
-                        </div>
                     </div>
                     <button class="finishing-modal__show-hide">
-                        Скрыть материалы по-умолчанию
+                        Показать материалы по-умолчанию
                     </button>
                 </div>
             </div>
