--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,24 @@
                 <li><a href="category-backdrop.html">Бэкдроп Категория (пакеты)</a></li>
                 <br><br>
                 <li><a href="finishing.html">Отделка гостиная (c изменением ракурса)</a></li>
+                <li><a href="finishing.html">Отделка гостиная -пакет</a></li>
+                <br><br>
+                <li><a href="finishing-wall.html">Мобильная версия страниц Обои</a></li>
+                <li><a href="finishing-floor.html">Мобильная версия страниц Ламинат</a></li>
+                <li><a href="finishing-floor-show.html">Мобильная версия страниц Ламинат</a></li>
+                <li><a href="finishing-shower-door.html">Мобильная версия страниц Ванная Двери</a></li>
+                <li><a href="finishing-shower-floor.html">Мобильная версия страниц Ванная Плитка</a></li>
+                <li><a href="finishing-shower-options.html">Мобильная версия страниц Ванная Опции</a></li>
+                <br><br>
+                <li><a href="finishing-modal1.html">Модальное окно страницы Отделка</a></li>
+                <li><a href="finishing-modal2.html">Модальное окно страницы Отделка</a></li>
+                <li><a href="finishing-modal3.html">Модальное окно страницы Отделка</a></li>
+                <li><a href="finishing-modal4.html">Модальное окно страницы Отделка</a></li>
+                <li><a href="finishing-modal5.html">Модальное окно страницы Отделка</a></li>
+                <li><a href="finishing-modal6.html">Модальное окно страницы Отделка</a></li>
+                <li><a href="finishing-modal7.html">Модальное окно страницы Отделка</a></li>
+                <li><a href="finishing-modal8.html">Модальное окно страницы Отделка</a></li>
+                <li><a href="finishing-modal9.html">Модальное окно страницы Отделка</a></li>
                 <br><br>
                 <li><a href="checkout1.html">Checkout: ремонт под ключ</a></li>
             </ul>
